--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <!-- <meta name="theme-color" content="#000000" /> -->
-  <meta name="description" content="An admin panel" />
+  <meta name="description" content="An admin dashboard" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;600;700;900&display=swap"
@@ -17,7 +17,7 @@
       margin: 0;
     }
   </style>
-  <title>Admin Panel</title>
+  <title>Admin Dashboard UI</title>
 </head>
 
 <body>
